--- a/_data/vita.yml
+++ b/_data/vita.yml
@@ -2,7 +2,7 @@
 header: Hi, I'm Pep Llaneras
 
 introduction: >-
-    This is my online curriculum vitae. I'm a software developer living in
+    This is my curriculum vitae. I'm a software developer living in
     Brussels, Belgium. I've been working professionally on software
     development since 2007. You can have a look below for more details and
     feel free to [contact me](#contact) if you're interested in
